added a title bar
dgfuidlçflhklfçgtjj,k/

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <body>
 
+<!--title bar-->
+<div class="title">
+    <p>hellory4n</p>
+</div>
+
 <h1>This website is a masterpiece</h1>
 
 </body>
