--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!--title bar-->
 <div class="title">
-    <p>hellory4n</p>
+    <h1>hellory4n</h1>
 </div>
 
 <h1>This website is a masterpiece</h1>
