fixed the title bar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <h1>hellory4n</h1>
 </div>
 
+<!--make sure the text won't be below the title bar-->
+<br>
+
+<!--content-->
 <h1>This website is a masterpiece</h1>
 
 </body>
