--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <title>hellory4n's super cook epok website</title>
+
 </head>
 
 <body>
@@ -24,8 +26,13 @@
 <br>
 
 <!--content-->
-<h1>This website is a masterpiece</h1>
+<noscript>Please enable JavaScript so the website can work properly!</noscript>
+<h1 id="hellotext">[random text]</h1>
+<h3 id="yourmom">[another random text]</h3>
 
+<p>joe mama</p>
+
+<script src="home.js"></script>
 </body>
 
 </html>
