--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 <h1 id="hellotext">[random text]</h1>
 <h3 id="yourmom">[another random text]</h3>
 
-<p>joe mama</p>
+<br>
+
+<h1>Stuff</h1>
+
+<h1 class="bananas"><a>Source code stuff</a></h1>
+<p class="bananas">Check if my code steals 4GB of data every second</p>
+<div class="button">
+    <a href="#">This button doesn't work xd</a>
+</div>
 
 <script src="home.js"></script>
 </body>
