--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="style.css">
+    <script defer src="home.js"></script>
 
     <title>hellory4n's super cook epok website</title>
+
+    <!-- make it look good on phones -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -28,19 +32,27 @@
 <!--content-->
 <noscript>Please enable JavaScript so the website can work properly!</noscript>
 <h1 id="hellotext">[random text]</h1>
-<h3 id="yourmom">[another random text]</h3>
+<!-- <h3 id="yourmom">[another random text]</h3> -->
 
 <br>
 
 <h1>Stuff</h1>
 
-<h1 class="bananas"><a>Source code stuff</a></h1>
-<p class="bananas">Check if my code steals 4GB of data every second</p>
-<div class="button">
-    <a href="#">This button doesn't work xd</a>
-</div>
+<h1 class="bananas">The code of this website</h1>
+<p class="banana">Check if my code steals 4GB of data every second</p>
+<a class="button" href="https://github.com/hellory4n/hellory4n.github.io">Tha code</a>
 
-<script src="home.js"></script>
+<h1 class="bananas">lelbot</h1>
+<p class="banana">The bot that makes you go lel</p>
+<a class="button" href="https://discord.com/api/oauth2/authorize?client_id=822199023636709456&permissions=8&scope=bot%20applications.commands">Invite</a>
+<a class="button" href="https://github.com/hellory4n/lelbot">Tha code</a>
+
+<h1 class="bananas">Free cookis</h1>
+<p class="banana">owo free cookis</p>
+<a class="button" href="https://youtu.be/7CrXugKLziM">10 cookis owo</a>
+<a class="button" href="https://youtu.be/cSAp9sBzPbc">100 cookis owo</a>
+<a class="button" href="https://youtu.be/x1arazpwACg">1 billion cookis owo</a>
+
 </body>
 
 </html>
