--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="style.css">
-    <script defer src="home.js"></script>
 
     <title>hellory4n's super cook epok website</title>
 
@@ -30,7 +29,7 @@
 <br>
 
 <!--content-->
-<noscript>Please enable JavaScript so the website can work properly!</noscript>
+<noscript>enable javascript plz uwu</noscript>
 <h1 id="hellotext">[random text]</h1>
 <!-- <h3 id="yourmom">[another random text]</h3> -->
 
@@ -52,6 +51,8 @@
 <a class="button" href="https://youtu.be/7CrXugKLziM">10 cookis owo</a>
 <a class="button" href="https://youtu.be/cSAp9sBzPbc">100 cookis owo</a>
 <a class="button" href="https://youtu.be/x1arazpwACg">1 billion cookis owo</a>
+
+<script src="home.js"></script>
 
 </body>
 
