--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- make it look good on phones -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="favicon.ico">
+
 </head>
 
 <body>
