--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1>hellory4n</h1>
 </div>
 
-<!--make sure the text won't be below the title bar-->
+<!--make sure the text won't be on the title bar-->
 <br>
 <br>
 
@@ -48,6 +48,10 @@
 <a class="button" href="https://youtu.be/7CrXugKLziM">10 cookis owo</a>
 <a class="button" href="https://youtu.be/cSAp9sBzPbc">100 cookis owo</a>
 <a class="button" href="https://youtu.be/x1arazpwACg">1 billion cookis owo</a>
+
+<h1 class="bananas">Random stuff</h1>
+<p class="banana">These suck</p>
+<a class="button" href="randomstuff.html">Ues</a>
 
 <script src="home.js"></script>
 
