--- a/randomstuff.html
+++ b/randomstuff.html
@@ -35,7 +35,7 @@
 
 <h1 class="bananas">ULTRA COOK WEB APP THAT SHOWS LELCUBE SPINNING AND YOU CAN TOGGLE THE SPIN</h1>
 <p class="banana">Tha best web app</p>
-<a class="button" href="ULTRA-COOK-WEB-APP-THAT-SHOWS-LELCUBE-SPINNING-AND-YOU-CAN-TOGGLE-THE-SPIN/index.html">Tha code</a>
+<a class="button" href="ULTRA-COOK-WEB-APP-THAT-SHOWS-LELCUBE-SPINNING-AND-YOU-CAN-TOGGLE-THE-SPIN/index.html">Your mom</a>
 
 </body>
 
