--- a/randomstuff.html
+++ b/randomstuff.html
@@ -40,6 +40,12 @@
 <p class="banana">Tha best web app</p>
 <a class="button" href="ULTRA-COOK-WEB-APP-THAT-SHOWS-LELCUBE-SPINNING-AND-YOU-CAN-TOGGLE-THE-SPIN/index.html">Your mom</a>
 
+<h1 class="bananas">incredible web app</h1>
+<p class="banana">Your mom</p>
+<a class="button" href="masterpiece/app.html">Play it now</a>
+<a class="button" href="masterpiece/Windows.zip">Download it lol (Windows)</a>
+<a class="button" href="masterpiece/Linux.zip">Download it lol (Linux)</a>
+
 </body>
 
 </html>
