--- a/index.html
+++ b/index.html
@@ -1,60 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-
-    <!--get baloo 2-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700;800&display=swap" rel="stylesheet"> 
-
-    <link rel="stylesheet" href="style.css">
-
-    <title>hellory4n's super cook epok website</title>
-
-    <!-- make it look good on phones -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="icon" href="favicon.ico">
-
-</head>
-
-<body>
-
-<!--title bar-->
-<div class="title">
-    <h1>hellory4n</h1>
-</div>
-
-<!--make sure the text won't be on the title bar-->
-<br>
-<br>
-
-<!--content-->
-<noscript>enable javascript plz uwu</noscript>
-<h1 id="hellotext">[random text]</h1>
-<!-- <h3 id="yourmom">[another random text]</h3> -->
-
-<br>
-
-<h1>Stuff</h1>
-
-<h1 class="bananas">The code of this website</h1>
-<p class="banana">Check if my code steals 4GB of data every second</p>
-<a class="button" href="https://github.com/hellory4n/hellory4n.github.io">Tha code</a>
-
-<h1 class="bananas">Free cookis</h1>
-<p class="banana">owo free cookis</p>
-<a class="button" href="https://youtu.be/7CrXugKLziM">10 cookis owo</a>
-<a class="button" href="https://youtu.be/cSAp9sBzPbc">100 cookis owo</a>
-<a class="button" href="https://youtu.be/x1arazpwACg">1 billion cookis owo</a>
-
-<h1 class="bananas">Random stuff</h1>
-<p class="banana">These suck</p>
-<a class="button" href="randomstuff.html">Ues</a>
-
-<script src="home.js"></script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Svelte</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
