--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"> 
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hellory4n</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <title>hellory4n's really cool website</title>
+    <meta name="description" content="This is my website">
+    <link rel="stylesheet" href="hell.css">
+</head>
+<body>
+    <img src="./assets/hello_world.png" alt="Windows 7 login wallpaper with the text &quot;hello world&quot; in comic sans">
+    <h1>Hi</h1>
+    <p class="short">I'm hellory4n</p>
+
+    <br>
+    <br>
+
+    <a href="https://unsplash.com/photos/Fa0pTKuoDVY"><img src="./assets/h4ck1ng.jpg" alt="Unreadable JavaScript code"></a>
+    <h1>I make computer go beep boop</h1>
+    <p class="short">aka magic aka hacking aka programming aka coding aka software engineering aka pro gaming</p>
+
+    <br>
+    <br>
+
+    <a href="https://unsplash.com/photos/Hfn_mJt9ks4"><img src="./assets/brazel.jpg" alt="Globe showing brazil"></a>
+    <h1>I'm gonna make you go to brazil</h1>
+    <p class="short">I'm not asking</p>
+
+    <br>
+    <br>
+
+    <a href="https://unsplash.com/photos/qAjJk-un3BI"><img src="./assets/a_lot_of_monitors_equals_true_programmer.jpg" alt="True programmer (he has 3 monitors)"></a>
+    <h1>I also make my code open-source</h1>
+    <p class="short">So other people can fix my code</a></p>
+    <div class="why">
+        <a href="https://github.com/hellory4n" class="button">My github</a>
+    </div>
+
+    <br>
+    <br>
+
+    <a href="https://unsplash.com/photos/ulRlAm1ITMU"><img src="./assets/garbage.jpg" alt="Garbage (twitter)"></a>
+    <h1>I also have a twitter account</h1>
+    <p class="short">You probably shouldn't go there tho</a></p>
+    <div class="why">
+        <a href="https://twitter.com/hellory4n1" class="button">Go there (don't)</a>
+    </div>
+
+    <br>
+    <br>
+
+    <a href="https://unsplash.com/photos/b21Ty33CqVs"><img src="./assets/PROJECTS[.jpg" alt="PROJECTS"></a>
+    <h1>Want to see my projects?</h1>
+    <p class="short">Then click on this shiny green button below</a></p>
+    <div class="why">
+        <a href="./projects.html" class="button">The shiny green button</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="./stupidprojects.html" class="button">Stupid projects</a>
+    </div>
+
+    <br>
+    <br>
+
+</body>
 </html>
