--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="hell.css">
 </head>
 <body>
+    <h1>i should update this</h1>
+
     <img src="./assets/hello_world.png" alt="Windows 7 login wallpaper with the text &quot;hello world&quot; in comic sans">
     <h1>Hi</h1>
     <p class="short">I'm hellory4n</p>
