--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,18 @@
     <br>
     <br>
 
+    <img src="./assets/corpsim.png" alt="Corporate Simulator">
+    <h1>Corporate Simulator</h1>
+    <p class="short">Make a company and take over the world</p>
+    <div class="why">
+        <a href="./corporate-simulator.html" class="button">Cool website</a>
+    </div>
+
+    <br>
+    <br>
+
     <img src="./assets/lelbot.png" alt="lelbot">
-    <h1>lelbot</h1>
+    <h1>lelbot (dead)</h1>
     <p class="short">the bot that makes you go lel</p>
     <div class="why">
         <a href="https://top.gg/bot/822199023636709456" class="button">Top.gg page</a>
