privacy policy game

--- a/corporate-simulator.html
+++ b/corporate-simulator.html
@@ -15,6 +15,9 @@
     <img src="./assets/corpsim.png" alt="Corporate Simulator">
     <h1>Corporate Simulator</h1>
     <p class="short">Corporate Simulator is a very cool game about making a company and taking over the world. It's gonna release one day.</p>
+    <div class="why">
+        <a href="./corporate-simulator/privacy.html" class="button">Privacy Policy</a>
+    </div>
 
 </body>
 </html>
