--- a/corporate-simulator.html
+++ b/corporate-simulator.html
@@ -16,8 +16,21 @@
     <h1>Corporate Simulator</h1>
     <p class="short">Corporate Simulator is a very cool game about making a company and taking over the world. It's gonna release one day.</p>
     <div class="why">
-        <a href="./corporate-simulator/privacy.html" class="button">Privacy Policy</a>
+        <iframe src="https://itch.io/embed/2090185?bg_color=082C54&amp;fg_color=ffffff&amp;link_color=008cff&amp;border_color=33465b" width="552" height="167" frameborder="0"><a href="https://hellory4n.itch.io/corporate-simulator">Corporate Simulator by hellory4n</a></iframe>
     </div>
+
+    <br>
+    <br>
+
+    <h1>Legal stuff</h1>
+    <div class="why">
+        <a href="./corporate-simulator/privacy.html" class="button">Privacy Policy</a>
+        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" class="button">License</a>
+    </div>
+    
+    <br>
+    <br>
+    <br>
 
 </body>
 </html>
