--- a/corporate-simulator.html
+++ b/corporate-simulator.html
@@ -22,10 +22,15 @@
     <br>
     <br>
 
-    <h1>Legal stuff</h1>
+    <h1>Other stuff</h1>
     <div class="why">
         <a href="./corporate-simulator/privacy.html" class="button">Privacy Policy</a>
         <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" class="button">License</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="./corporate-simulator/press.html" class="button">Press</a>
     </div>
     
     <br>
