--- a/corporate-simulator.html
+++ b/corporate-simulator.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="corpsim.css">
 </head>
 <body>
-    <img src="./assets/corpsim.png" alt="Corporate Simulator">
+    <div class="why">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/32eNge9dPos" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
     <h1>Corporate Simulator</h1>
-    <p class="short">Corporate Simulator is a very cool game about making a company and taking over the world. It's gonna release one day.</p>
+    <p class="short">Corporate Simulator is a very cool game about making a company and taking over the world that will be released in 26 June 2023.</p>
     <div class="why">
         <iframe src="https://itch.io/embed/2090185?bg_color=082C54&amp;fg_color=ffffff&amp;link_color=008cff&amp;border_color=33465b" width="552" height="167" frameborder="0"><a href="https://hellory4n.itch.io/corporate-simulator">Corporate Simulator by hellory4n</a></iframe>
     </div>
