--- a/corporate-simulator/press.html
+++ b/corporate-simulator/press.html
@@ -14,8 +14,12 @@
 <body>
     <h1>Press Kit</h1>
 
+    <div class="why">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/32eNge9dPos" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+
     <h2>Details</h2>
-    <p class="short">Release date: ?? ???? 2023 on <a href="https://hellory4n.itch.io/corporate-simulator">itch.io</a> and Google Play Store</p>
+    <p class="short">Release date: 26 June 2023 on <a href="https://hellory4n.itch.io/corporate-simulator">itch.io</a> and Google Play Store</p>
     <p class="short">Platforms: Windows, Android, Linux</p>
     <p class="short">Developers: Almost everything by hellory4n, music and sounds by alex343xd</p>
     <p class="short">Contact: <a href="mailto:hellory4n@gmail.com">Email</a>, <a href="https://twitter.com/hellory4n1">Twitter</a>, <a href="https://discord.gg/mSb9bbeJ8S">Discord</a></p>
