--- a/corporate-simulator.html
+++ b/corporate-simulator.html
@@ -32,7 +32,7 @@
         <br>
         <br>
         <br>
-        <a href="./corporate-simulator/press.html" class="button">Press</a>
+        <a href="./corporate-simulator/press.html" class="button">Press Kit</a>
     </div>
     
     <br>
