--- a/corporate-simulator/press.html
+++ b/corporate-simulator/press.html
@@ -42,5 +42,12 @@
     <img src="../assets/corpsim3.png" alt="Corporate Simulator Screenshot">
     <img src="../assets/corpsim4.png" alt="Corporate Simulator Screenshot">
 
+    <br>
+
+    <h2>Soundtrack</h2>
+    <div class="why">
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/t8F4lfJOPJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+
 </body>
 </html>
